Added Enriched Resort Data to the frontend

--- a/frontend/src/components/styles/MountainCard.css
+++ b/frontend/src/components/styles/MountainCard.css
@@ -33,4 +33,20 @@
     font-size: 1em;
     color: #666;
   }
+
+  .mountain-details {
+    display: none; /* Hide details by default */
+    padding-top: 1em;
+  }
+  
+  .mountain-card.expanded .mountain-details {
+    display: block; /* Show details when expanded */
+  }
+  
+  /* Add specific styles for the number of lifts open */
+  .mountain-lifts {
+    margin-top: 0.5em;
+    font-size: 1.2em;
+    font-weight: bold;
+  }
   
