--- a/frontend/src/components/styles/MountainCard.css
+++ b/frontend/src/components/styles/MountainCard.css
@@ -10,6 +10,7 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
+    position: relative;
   }
   
   .mountain-card:hover {
@@ -33,4 +34,18 @@
     font-size: 1em;
     color: #666;
   }
+
+  .favorite-star {
+    cursor: pointer;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    height: 25px;
+    width: 25px;
+    stroke: black; /* This ensures the stroke is black */
+    stroke-width: 1px; /* Adjust as needed for outline thickness */
+    z-index: 10;
+  }
+
+
   
