standardizing mountain card dims

--- a/frontend/src/components/styles/MountainCard.css
+++ b/frontend/src/components/styles/MountainCard.css
@@ -11,6 +11,8 @@
     align-items: center;
     text-align: center;
     position: relative;
+    min-width: 300px;
+    min-height:200px;
   }
   
   .mountain-card:hover {
